--- a/IDE/Vdom/vdom/controls/resourceBrowser/ThumbnailItem.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ThumbnailItem.mxml
@@ -29,6 +29,8 @@
 		
 			import mx.controls.Image;
 			
+			private var loader:Loader = new Loader();
+			
 			private var __id:String;
 			private var __selected:Boolean = false;
 			private var __objType:String = "";
@@ -37,11 +39,17 @@
 			public var imageHeight:int = 0;
 
 			public function set resource(source:Object):void {
-				__image.source = source.data;				
-				imageWidth = source.data.bitmapData.width;
-				imageHeight = source.data.bitmapData.height;
-				this.toolTip = imageWidth.toString() + "x" + imageHeight.toString();
+				loader.contentLoaderInfo.addEventListener(Event.COMPLETE, imageLoadComplete);
+				loader.loadBytes(source.data);
 			}
+			
+			private function imageLoadComplete(event:Event):void {
+				loader.contentLoaderInfo.removeEventListener(Event.COMPLETE, imageLoadComplete);
+				__image.source = loader.content				
+				imageWidth = loader.width;
+				imageHeight = loader.height;
+				this.toolTip = imageWidth.toString() + "x" + imageHeight.toString();			
+			}			
 			
 			public function set objName(text:String):void { __name.text = text; }
 			
