--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -43,6 +43,7 @@
  * 		массив элементов строить из другого места(массив "сортируемегого дерева" строить так же)
  * 		* делетеБТ должен исчезать когда нажимается другой елемент
  * 		* при создании нового елемента блокировать кнопку "ок"
+ * 		выделить новосозданный елемент
  * 		
  * */
 	
@@ -150,6 +151,8 @@
 	{
 		if(trEvt.currentTarget.ID != null)
 			redrawLines(trEvt.currentTarget.ID); 
+		
+		
 	}
 	
 	/** 
