--- a/IDE/Vdom/vdom/modules/Editor.mxml
+++ b/IDE/Vdom/vdom/modules/Editor.mxml
@@ -11,7 +11,7 @@
 	show="showHandler();"
 	hide="hideHandler();"
 	
-	creationPolicy="all">
+	creationPolicy="all" xmlns:eventEditor="vdom.components.eventEditor.*">
 	
 <mx:Script source="includes/editor.as" />
 
@@ -59,7 +59,8 @@
 		
 		<controls:ActionButton styleName="eventsButton"
 			label="{resourceManager.getString('Application','editor_events')}"
-			labelPlacement="bottom"/>	
+			labelPlacement="bottom"
+			click="{placeCanvas.selectedChild=eventCanv}"/>	
 	</controls:ControlPanel>
 	
 	<mx:ViewStack id="placeCanvas" 
@@ -69,16 +70,18 @@
 		paddingTop="7" paddingBottom="7" paddingLeft="7" paddingRight="7">
 	
 		<mx:Canvas id="initComponent" width="100%" height="100%">
-			<mx:Label text="Loading..." horizontalCenter="0" verticalCenter="0"/>
+			<mx:Label text="Loading..." horizontalCenter="0" verticalCenter="0" />
 		</mx:Canvas>
 		
 		<edit:Edit id="editorCanv" width="100%" height="100%"/>
 		
-		<scriptEditor:ScriptEditor id="scriptCanv" width="100%" height="100%"/>
+		<scriptEditor:ScriptEditor id="scriptCanv" width="100%" height="100%" />
 			
 		<treeEditor:TreeEditor id="treeCanv" width="100%" height="100%" />
 		
-		<analyse:Analyse id="analyseCanv" width="100%" height="100%"/>
+		<analyse:Analyse id="analyseCanv" width="100%" height="100%" />
+		
+		<eventEditor:EventEditor id="eventCanv" width="100%" height="100%" /> 
 		
 	</mx:ViewStack>
 </mx:VBox>
