--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -37,13 +37,13 @@
 /******* 
  * 			to Do
  * 	
- * 		добавлять новый елемент в самый низ 
- * 		у трее елемента сменить по умолчанию картинку
- * 		у трии елемента картинка в соответстви с его типом.
- * 		массив элементов строить из другого места(массив "сортируемегого дерева" строить так же)
+ * 		* добавлять новый елемент в самый низ 
+ * 		* у трее елемента сменить по умолчанию картинку
+ * 		* у трии елемента картинка в соответстви с его типом.
+ * 		??? массив элементов строить из другого места(массив "сортируемегого дерева" строить так же)
  * 		* делетеБТ должен исчезать когда нажимается другой елемент
  * 		* при создании нового елемента блокировать кнопку "ок"
- * 		выделить новосозданный елемент
+ * 		* выделить новосозданный елемент
  * 		
  * */
 	
