--- a/IDE/Vdom/vdom/managers/renderClasses/WaitCanvas.mxml
+++ b/IDE/Vdom/vdom/managers/renderClasses/WaitCanvas.mxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" backgroundColor="#c0c0c0">
-	<mx:Text text="Loading..." left="5" top="5"/>
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" backgroundColor="#c0c0c0">
+	
+	<mx:Label text="Label"/>
 	
 </mx:Canvas>
