--- a/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
@@ -2,6 +2,7 @@
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" creationComplete="creationCompleteHandler()" xmlns:eventEditor="vdom.components.eventEditor.*">
 	 <mx:Script>
 	 	<![CDATA[
+	 		import vdom.events.TreeEditorEvent;
 	 		import mx.controls.Tree;
 	 		import vdom.components.treeEditor.Vector2;
 	 		import vdom.managers.DataManager;
@@ -16,7 +17,7 @@
 	 		[Bindable]
 	 		private var dataManager:DataManager;
 	 		
-	 		
+	 		private var linesArray:Array = new Array();
 	 		
 	 		private function creationCompleteHandler():void
 	 		{
@@ -47,19 +48,27 @@
 	                var dropTarget:Canvas=Canvas(event.currentTarget);
 	                DragManager.acceptDragDrop(dropTarget);
 	        }
+            
+            private var eventsArray	:Array = new Array();
+            private var actionsArray:Array = new Array();
                 
 	        private function dragDropHandler(event:DragEvent):void 
 	        {
 	        	var newElement:*;
 	        	  if( event.dragInitiator is TreeActions ) 
 	        	  {
-	        		 newElement =  new EventEditorAction('123');
+	        		 newElement =  new EventEditorAction(Math.random());
+	        		 newElement.addEventListener(MouseEvent.CLICK, stopDrawLine);
+	        		 eventsArray[newElement.ID] = newElement;
 	        	  } 
 	        	  else if (event.dragInitiator is TreeEvents ) 
 	        	  {
-	        	  	newElement = new EventEditorEvent('123');
+	        	  	newElement = new EventEditorEvent(Math.random());
+	        	  	newElement.addEventListener(TreeEditorEvent.START_DRAW_LINE, startDrawLine);
+	        	  	actionsArray[newElement.ID] = newElement;
 	        	  }
 	        	  
+	        	trace('Created new element: '+newElement.ID);
 	        	newElement.x = event.localX;
 	        	newElement.y = event.localY;
 	        	
@@ -79,54 +88,81 @@
             */
             private var blDrawLine:Boolean = false;
             private var line:Vector2 = new Vector2();
-        /*
+        	private var curEvent:Object;
             private function startDrawLine(trEvt:TreeEditorEvent):void
 			{
-				can.addChild(vctTest);//--для рисования связывающей линии
-				addEventListener(MouseEvent.MOUSE_MOVE, drLine);
+				can.addChild(line);//--для рисования связывающей линии
+				can.addEventListener(MouseEvent.MOUSE_MOVE, drLine);
 				
 				blDrawLine = true; //говорим что рисуем линию
 				addEventListener(MouseEvent.MOUSE_DOWN, stopDrawLine);
-				drLine(new MouseEvent(MouseEvent.MOUSE_OVER));
-				vctTest.graphics.clear();
+				
+				curEvent = actionsArray[trEvt.ID]
+	//			drLine(new MouseEvent(MouseEvent.MOUSE_OVER));
+	//			line.graphics.clear();
 			}
+			// 7-701-249-68-36 cancho 
+			// 7-702-153-44-95 vascho
+			// 
+
 			
-			private var curEvent:Object;
 			private function drLine (mEvt:MouseEvent):void
 			{
-				var pnTo:Object = calculatePointTo(mouseX + can.horizontalScrollPosition, mouseY + can.verticalScrollPosition , curEvent);
+			// нормализуем mouseX mouseY
+				 var pt:Point = new Point(mEvt.localX, mEvt.localY);
+            		pt = mEvt.target.localToGlobal(pt);
+            		pt = can.globalToLocal(pt);
+				
+				var pnTo:Object = calculatePointTo(pt, curEvent);
 				
 				line.graphics.clear();
 				line.createVector(curEvent, pnTo);	
 			}
 			
-			private function calculatePointTo(mouseX:Number, mouseY:Number, curTree:Object):Object
+			private function calculatePointTo(pn:Point, curTree:Object):Object
 			{
-				var tX:int = mouseX - curTree.x;
-				var tY:int = mouseY - curTree.y;
+				var tX:int = pn.x - vBox.x - curEvent.x;
+				var tY:int = pn.y  - curEvent.y;
 				
 				var pnTo:Object = new Object();
 				// чтоб мышка не кликала по своей линии
 				
-				if((tX>0))	pnTo.x = mouseX - 10;
-					else pnTo.x = mouseX + 10;
+				if((tX>0))	pnTo.x = pn.x - 10;
+					else pnTo.x = pn.x + 10;
 				
-				if( (tY>0))	pnTo.y = mouseY - 10;
-					else pnTo.y = mouseY + 10;
+				if( (tY>0))	pnTo.y = pn.y - 10;
+					else pnTo.y = pn.y + 10;
 					
 				return pnTo;
 			}
 			
 			private function stopDrawLine(msEvt:MouseEvent):void
 			{
-				removeEventListener(MouseEvent.MOUSE_MOVE, drLine);
+				can.removeEventListener(MouseEvent.MOUSE_MOVE, drLine);
 				removeEventListener(MouseEvent.MOUSE_DOWN, stopDrawLine);
 				
-				vctTest.clear();
-				main.removeChild(vctTest); ///-------------***********
+				line.clear();
+				can.removeChild(line); ///-------------***********
 				blDrawLine = false;  //говорим что НЕ рисуем линию
 			}
-			*/
+			
+			private function stopDrawLine(msEvt:MouseEvent):void
+			{
+				
+				if (!blDrawLine)
+					return;
+					
+				can.removeEventListener(MouseEvent.MOUSE_MOVE, drLine);
+				removeEventListener(MouseEvent.MOUSE_DOWN, stopDrawLine);	
+				line.clear();
+				can.removeChild(line);
+				blDrawLine = false; 
+				
+				linesArray
+				
+					
+			}
+			
 			
 			private function treeContainerChangeHandler(evt:Event):void
 			{
@@ -178,10 +214,10 @@
 		        </mx:TabNavigator>
             </mx:Canvas>
 
-            <mx:VBox  width="100%" height="100%" >
+            <mx:VBox id="vBox" width="100%" height="100%" >
                 <mx:Label text="Current container: selected container" fontWeight="bold"  color="0xFFFFFF"/>
                 <mx:Canvas id="can" width="100%" height="100%" 
-                		backgroundColor="#09FC09"
+                		backgroundColor="#cccccc"
                 	 	dragEnter="dragEnterHandler(event);" 
         				dragDrop="dragDropHandler(event);"/>
             </mx:VBox>
